# haskell-simple

./: README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: stack.yaml  {{cookiecutter.project_name}}.cabal
{{cookiecutter.project_name}}/: .gitignore  {{cookiecutter.project_name}}.cabal
