cabal-version: {{cookiecutter.cabal_version}}

name:           {{cookiecutter.project_name}}
version:        {{cookiecutter.version}}
description:    Please see the README at <https://{{cookiecutter.remote_vcs}}/{{cookiecutter.remote_vcs_user}}/{{cookiecutter.project_name}}#readme>
homepage:       https://{{cookiecutter.remote_vcs}}/{{cookiecutter.remote_vcs_user}}/{{cookiecutter.project_name}}#readme
bug-reports:    https://{{cookiecutter.remote_vcs}}/{{cookiecutter.remote_vcs_user}}/{{cookiecutter.project_name}}/issues
author:         {{cookiecutter.maintainer}}
maintainer:     {{cookiecutter.maintainer_email}}
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://{{cookiecutter.remote_vcs}}/{{cookiecutter.remote_vcs_user}}/{{cookiecutter.project_name}}

executable {{cookiecutter.project_name}}-exe
  main-is: Main.hs
  other-modules:
      Paths_{{cookiecutter.project_name}}
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite {{cookiecutter.project_name}}-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_{{cookiecutter.project_name}}
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , {{cookiecutter.project_name}}
  default-language: Haskell2010
